test/assignExp6.slq
// args: --run

def main(){
	x:=H(0:ğ”¹);
	x=H(x); /// error
	return x; /// error
}
